--- a/src/scss/var.scss
+++ b/src/scss/var.scss
@@ -12,6 +12,9 @@
   --bg-blue: rgba(237, 242, 255, 1);
   --bg-light-blue: rgba(237, 242, 255, 0.5);
 
+  --border-gray-light: rgba(0, 0, 0, 0.15);
   --border-light: rgba(0, 122, 255, 0.1);
   --border-black: rgba(26, 26, 26, 1);
+
+  --transition: all 0.3s ease;
 }
