--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,17 +2,15 @@
 @use 'scss/common';
 
 html {
-  font-size: 16px;
+  font-size: 19px;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-variation-settings: 'FILL' 0, 'wght' 300, 'GRAD' 0, 'opsz' 48;
+  font-family: 'Public Sans', sans-serif;
+  font-style: normal;
+  font-optical-sizing: auto;
+  // font-variation-settings: 'FILL' 0, 'wght' 300, 'GRAD' 0, 'opsz' 48;
 }
 
 code {
