--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -90,6 +90,30 @@
   text-decoration: none;
 }
 
+.color-blue {
+  color: var(--text-blue);
+}
+
+.font-weight-400 {
+  font-weight: 400;
+}
+
+.font-weight-500 {
+  font-weight: 500;
+}
+
 .font-weight-600 {
   font-weight: 600;
+}
+
+.bg-main {
+  background: var(--bg-main);
+}
+
+.bg-blue {
+  background: var(--bg-blue);
+}
+
+.bg-light-blue {
+  background: var(--bg-light-blue);
 }
