--- a/src/scss/var.scss
+++ b/src/scss/var.scss
@@ -17,5 +17,7 @@
   --border-black: rgba(26, 26, 26, 1);
 
   --transition: all 0.3s ease;
+  --border-radius-sm: 0.3rem;
   --border-radius: 0.6rem;
+  --border-radius-lg: 1.2rem;
 }
